# WIZnet-S2E-Tool-GUI

./: .gitignore  CertUploadThread.py  FINAL_SUMMARY.md  FWUploadThread.py  LICENSE  NEW_ARCHITECTURE_GUIDE.md  PHASE_1B_GUIDE.md  PHASE_1_SUMMARY.md  PHASE_2B_COMPLETE.md  QUICK_START.md  README.md  REFACTORING_PROGRESS.md  SETUP_DEV.md  SETUP_GUIDE.md  TCPMulticastScanner.py  TESTING_GUIDE.md  WIZ107CMDSET.py  WIZ2000CMDSET.py  WIZ510SSLCMDSET.py  WIZ750CMDSET.py  WIZ752CMDSET.py  WIZArgParser.py  WIZMSGHandler.py  WIZMakeCMD.py  WIZS2ECMDSET.py  WIZUDPSock.py  build copy.bat  build.bat  build.ps1  build_with_uv.ps1  certificatethread.py  constants.py  csv_mru_manager.py  device_search_config.py  h origin WIZSPE  json_editor_dialog.py  main_gui.py  message_handler.py  network_utils.py  pyproject.toml  (+11 more)
107_108_config/: __init__.py  __main__.py  main.py  sec.py  transport.py
adapters/: __init__.py  base_adapter.py  qt_adapter.py  qt_integration_example.py
common/: messagebox.py
config/: device_search_timing.default.yaml  ui_state.json
config/devices/: devices_sample.json
config/devices/backups/: devices_20260114_161541.json
config/schemas/: device_model_schema.json
core/: __init__.py  device_registry.py
core/models/: __init__.py  command.py  device_config.py  device_model.py
core/services/: __init__.py  device_service.py
doc/: README.md  S2E-Configuration.drawio
docs/: COMMAND_REFERENCE.md  IMPLEMENTATION_PLAN.md  README_TIER1_2.md  REFACTORING_STATUS.md  WORK_SUMMARY.md
gui/: dialog_exit.ui  dialog_fwup_complete.ui  dialog_fwup_error.ui  dialog_invalid.ui  dialog_onebtn.ui  dialog_warning_factory.ui  dialog_warning_reset.ui  version_info.ui  wizconfig_gui.ui
scripts/: create_template.py  generate_command_docs.py  manage_config.py  validate_config.py
tests/: test_adapter.py  test_integration.py  test_message_handler.py  test_registry.py
wizsocket/: TCPClient.py  TCPServer.py
